docs-website/versioned_docs/version-2.30/pipeline-components/audio/remotewhispertranscriber.mdx
---
title: "RemoteWhisperTranscriber"
id: remotewhispertranscriber
slug: "/remotewhispertranscriber"
description: "Use `RemoteWhisperTranscriber` to transcribe audio files using OpenAI's Whisper model."
---

# RemoteWhisperTranscriber

Use `RemoteWhisperTranscriber` to transcribe audio files using OpenAI's Whisper model.

<div className="key-value-table">

|  |  |
| --- | --- |
| **Most common position in a pipeline** | As the first component in an indexing pipeline                                                 |
| **Mandatory init variables**           | `api_key`: An OpenAI API key. Can be set with an environment variable `OPENAI_API_KEY`.        |
| **Mandatory run variables**            | `sources`: A list of paths or binary streams that you want to transcribe                       |
| **Output variables**                   | `documents`: A list of documents                                                               |
| **API reference**                      | [Whisper](/reference/integrations-whisper)                                                                         |
| **GitHub link**                        | https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/whisper |
| **Package name** | `whisper-haystack` |

</div>

## Overview

The `RemoteWhisperTranscriber` is part of the `whisper-haystack` integration package. Install it with:

```python
pip install whisper-haystack
```

`RemoteWhisperTranscriber` works with OpenAI-compatible clients and isn't limited to just OpenAI as a provider. For example, [Groq](https://console.groq.com/docs/speech-text) offers a drop-in replacement that can be used as well. You can set the API key in one of two ways:

1. Through the `api_key` initialization parameter, where the key is resolved using [Secret API](../../concepts/secret-management.mdx).
2. By setting it in the `OPENAI_API_KEY` environment variable, which the system will use to access the key.

```python
from haystack_integrations.components.audio.whisper import RemoteWhisperTranscriber

transcriber = RemoteWhisperTranscriber()
```

Additionally, the component requires the following parameters to work:

- `model` specifies the Whisper model.
- `api_base_url` specifies the OpenAI base URL and defaults to `"https://api.openai.com/v1"`. If you are using Whisper provider other than OpenAI set this parameter according to provider's documentation.

See other optional parameters in our [API documentation](/reference/integrations-whisper).

See the [Whisper API documentation](https://platform.openai.com/docs/guides/speech-to-text) and the official Whisper [GitHub repo](https://github.com/openai/whisper) for the supported audio formats and languages.

## Usage

### On its own

Here’s an example of how to use `RemoteWhisperTranscriber` to transcribe a local file:

```python
import requests
from haystack_integrations.components.audio.whisper import RemoteWhisperTranscriber

response = requests.get(
    "https://ia903102.us.archive.org/19/items/100-Best--Speeches/EK_19690725_64kb.mp3",
)
with open("kennedy_speech.mp3", "wb") as file:
    file.write(response.content)

transcriber = RemoteWhisperTranscriber()
transcription = transcriber.run(sources=["./kennedy_speech.mp3"])

print(transcription["documents"][0].content)
```

### In a pipeline

The pipeline below fetches an audio file from a specified URL and transcribes it. It first retrieves the audio file using `LinkContentFetcher`, then transcribes the audio into text with `RemoteWhisperTranscriber`, and finally outputs the transcription text.

```python
from haystack_integrations.components.audio.whisper import RemoteWhisperTranscriber
from haystack.components.fetchers import LinkContentFetcher
from haystack import Pipeline

pipe = Pipeline()
pipe.add_component("fetcher", LinkContentFetcher())
pipe.add_component("transcriber", RemoteWhisperTranscriber())

pipe.connect("fetcher", "transcriber")
result = pipe.run(
    data={
        "fetcher": {
            "urls": [
                "https://ia903102.us.archive.org/19/items/100-Best--Speeches/EK_19690725_64kb.mp3",
            ],
        },
    },
)
print(result["transcriber"]["documents"][0].content)
```

## Additional References

🧑‍🍳 Cookbook: [Multilingual RAG from a podcast with Whisper, Qdrant and Mistral](https://haystack.deepset.ai/cookbook/multilingual_rag_podcast)
